--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,8 +25,8 @@
 	// "shutdownAction": "none",
 
 	// Uncomment the next line to use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "apk add make && go install github.com/spf13/cobra-cli@latest",
+	//"postCreateCommand": "apk add make && go install github.com/spf13/cobra-cli@latest",
 
 	// Comment out to connect as root instead. To add a non-root user, see: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "root"
+	"remoteUser": "renatus"
 }
